Actualizacion del proyecto